# ibc-eureka-cw

./: Cargo.toml  README.md  taplo.toml
.cargo/: config.toml
.github/workflows/: rust.yaml
app/: Cargo.toml
app/src/: implementation.rs  interface.rs  lib.rs
applications/cw20-transfer/: Cargo.toml
applications/cw20-transfer/src/: lib.rs
applications/interface/: Cargo.toml
applications/interface/src/: lib.rs
applications/pingpong/: Cargo.toml
applications/pingpong/src/: lib.rs
client/: Cargo.toml
client/src/: implementation.rs  interface.rs  lib.rs
integration/: Cargo.toml
integration/src/: tests.rs
lightclients/dummy/: Cargo.toml
lightclients/dummy/src/: lib.rs
lightclients/interface/: Cargo.toml
lightclients/interface/src/: lib.rs
tao/: Cargo.toml
tao/src/: lib.rs
test-integration/: Cargo.toml
test-integration/src/: tests.rs
