[workspace]
resolver = "2"
members  = [ "applications/*", "lightclients/*", "tao", "test-integration" ]

[workspace.package]
version      = "0.0.0"
edition      = "2021"
rust-version = "1.81.0"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
cosmwasm-std    = { version = "2.0", features = [ "staking" ] }
sylvia          = "1.0"
serde           = "1.0"
schemars        = "0.8"
cosmwasm-schema = "2.0"
cw-storey       = "0.4"
storey          = "0.3"
rstest          = "0.23"

eureka-lightclient-interface = { path = "lightclients/interface" }
eureka-lightclient-dummy     = { path = "lightclients/dummy" }
eureka-application-interface = { path = "applications/interface" }
eureka-application-pingpong  = { path = "applications/pingpong" }
eureka-tao                   = { path = "tao" }

# [workspace.lints.rust]
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
use_self = "warn"
