[package]
name         = "eureka-app"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }

[features]
library = [  ]

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
cosmwasm-std    = { workspace = true }
sylvia          = { workspace = true }
serde           = { workspace = true }
schemars        = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }

[dev-dependencies]
sylvia = { workspace = true, features = [ "mt" ] }


[lints]
workspace = true
