[package]
name         = "integration"
edition      = { workspace = true }
version      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
publish      = false

[dependencies]
sylvia        = { workspace = true, features = [ "mt" ] }
rstest        = { workspace = true }
eureka-tao    = { workspace = true }
eureka-app    = { workspace = true }
eureka-client = { workspace = true }

[lints]
workspace = true
