[package]
name         = "eureka-application-cw20-transfer"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }

[features]
library = [  ]

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
cosmwasm-std                 = { workspace = true }
sylvia                       = { workspace = true }
serde                        = { workspace = true }
schemars                     = { workspace = true }
cosmwasm-schema              = { workspace = true }
cw-storey                    = { workspace = true }
eureka-application-interface = { workspace = true }
serde_json                   = "1.0.128"
cw20                         = "2.0.0"
cw20-base                    = "2.0.0"

[lints]
workspace = true
