[package]
name         = "eureka-application-interface"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }

[dependencies]
cosmwasm-std    = { workspace = true }
sylvia          = { workspace = true }
serde           = { workspace = true }
schemars        = { workspace = true }
cosmwasm-schema = { workspace = true }

[lints]
workspace = true
